Added userScopes mapping