@@ -1,5 +1,6 @@
 package microservice.userService.config;
 
+import microservice.userService.helpers.ScopesHelper;
 import microservice.userService.models.AccessTokenProvider;
 import microservice.userService.models.RoleScopes;
 import microservice.userService.models.UserRoles;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,10 +41,10 @@ class BearerTokenAuthenticationProvider implements AuthenticationProvider {
     @Autowired
     private ScopesRepository scopeRepository;
 
-
     @Override
     @Transactional(readOnly = true) // Important for lazy loading issues
     public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+
         BearerTokenAuthentication auth = (BearerTokenAuthentication) authentication;
         String token = auth.getToken();
 
@@ -50,32 +52,18 @@ class BearerTokenAuthenticationProvider implements AuthenticationProvider {
         if (accessTokenProvider == null) {
             return null;  // Or throw an AuthenticationException
         }
-
         if (accessTokenProvider.getExpiresAt().isBefore(LocalDateTime.now())) {
             return null; // Or throw an AuthenticationException
         }
-
         Users user = userRepository.findById(accessTokenProvider.getUserId());
         if (user == null) {
             return null;  // Or throw an AuthenticationException
         }
-
-        // Fetch roles and scopes explicitly
-        List<UserRoles> userRoles = userRoleRepository.findByUserId(user.getId());
-        List<SimpleGrantedAuthority> authorities = userRoles.stream()
-                .map(UserRoles::getRoleId)
-                .map(roleId -> roleRepository.findById(roleId).orElse(null))
-                .filter(role -> role != null)
-                .flatMap(role -> {
-                    List<RoleScopes> roleScopes = roleScopesRepository.findByRoleId(role.getId());
-                    return roleScopes.stream()
-                            .map(RoleScopes::getScopeId)
-                            .map(scopeId -> scopeRepository.findById(Long.valueOf(scopeId)).orElse(null))
-                            .filter(scope -> scope != null)
-                            .map(scope -> new SimpleGrantedAuthority("SCOPE_" + scope.getName()));
-                })
-                .collect(Collectors.toList());
-
+        String[] userScopes = ScopesHelper.parseScopes(accessTokenProvider.getAvailableScopes());
+        List<SimpleGrantedAuthority> authorities = Arrays.stream(userScopes)
+                        .map(String::trim) // Trim whitespace, important!
+                        .map(SimpleGrantedAuthority::new)
+                        .toList();
         return new BearerTokenAuthentication(token, user, authorities);
     }
 
